--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,32 +2,32 @@
 
   <div class="home-image">
     <img src="../../assets/images/justDoIt.jpg"
-      alt="Shia LaBeouf => Motivational Speech">
+      alt="Shia LaBeouf => Мотивация">
   </div>
 
   <div class="home-text">
     <p>
-      Do it ! Just do it !
+      Сделай это ! Просто сделай это !
     </p>
     <p>
-      Don't let your dreams be dreams. Yesterday you said tomorrow.<br>
-      So just do it ! Make your dreams come true. Just do it !
+      Не позвольяй твоим мечтам оставаться мечтами! Вчера ты говорил завтра.<br>
+      Так что сделай это! Воплоти свои мечты в реальность! Просто сделай это!
     </p>
     <p>
-      Some people dream of success. While you're gonna<br>
-      wake up and work hard at it. Nothing is impossible !
+      Некоторые люди мечтают об успехе. Пока ты<br>
+      wпросыпаешься и вкалываешь. Нет ничего невозможного!
     </p>
     <p>
-      You should get to the point. Where anyone else would quit.<br>
-      And you're not going to stop there. No, what are you waiting for ?
+      Ты должен дойти до точки, когда все остальные сдадуться.<br>
+      Но это тебя не остановит. Нет! Чего ты ждешь?
     </p>
     <p>
-      Do it ! Just do it ! Yes you can. Just do it !<br>
-      If you're tired of starting over. Stop giving up !
+      Сделай это ! Просто сделай это ! Да, ты можешь. Просто сделай это!<br>
+      Если ты устал начинать сначала, не сдавайся!
     </p>
   </div>
 
-<!-- 
+<!--
   <button style="background-color: lightgreen"
     mat-button (click)="openNewPage('/auth/login')">
     Go to 'login'
