--- a/src/app/todos/todos-form/todos-form.component.html
+++ b/src/app/todos/todos-form/todos-form.component.html
@@ -2,7 +2,7 @@
 
   <mat-form-field class="input-field">
     <input matInput [(ngModel)]="newTodo" (keyup.enter)="onAdd()"
-      placeholder="Enter your todo here">
+      placeholder="Напиши задачу и добавь ее">
   </mat-form-field>
 
   <button mat-mini-fab color="primary"
