--- a/src/app/todos/todos-list/todos-list.component.html
+++ b/src/app/todos/todos-list/todos-list.component.html
@@ -1,7 +1,7 @@
 <div class="todos-list-area">
 
   <div *ngIf="!todos.length" class="no-data">
-    How can you live without todos ?
+    Задач еще нет, добавь новые, и жизнь заиграет новыми красками
   </div>
 
   <div *ngIf="todos.length" class="todos-list">
