--- a/src/app/shared/dialogs/dialog-delete/dialog-delete.component.html
+++ b/src/app/shared/dialogs/dialog-delete/dialog-delete.component.html
@@ -1,12 +1,11 @@
 <h2 mat-dialog-title>
   {{ data.title }}
 </h2>
-  
+
 <mat-dialog-content>
-  <p>Are you sure ???</p>
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="false">No</button>
-  <button mat-button [mat-dialog-close]="true">Yes</button>
+  <button mat-button [mat-dialog-close]="false">Нет</button>
+  <button mat-button [mat-dialog-close]="true">Да</button>
 </mat-dialog-actions>
