editfirebase(den-tampli)

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="toolbar-area">
 
   <div>
-    <!-- Welcome in Todo App !!! -->
+    <!-- Welcome in Todo App -->
     Привет,
       <span *ngIf="user">{{ user.email }}</span>
       <span *ngIf="!user">Анонимус</span>
