--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -4,7 +4,7 @@
     <!-- Welcome in Todo App -->
     Привет,
       <span *ngIf="user">{{ user.email }}</span>
-      <span *ngIf="!user">Анонимус</span>
+      <span *ngIf="!user">Аноним</span>
   </div>
 
   <div class="toolbar-buttons">
