--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -6,6 +6,12 @@
 .user-profile__title {
   text-align: center;
 }
+.size-position{
+  width: 90%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .user-profile__form {
   min-width: 150px;
@@ -45,4 +51,13 @@
 .user-profile__button_cancel {
   padding: 5px 15%;
   background-color: #f0808085;
+}
+
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
 }
