--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<mat-card class="user-profile">
+<!-- <mat-card class="user-profile">
 
   <mat-card-title class="user-profile__title">
     Профиль
@@ -48,4 +48,25 @@
     </button>
   </mat-card-actions>
 
-</mat-card>
+</mat-card> -->
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Общие сведения</mat-card-title>
+    </mat-card-header>
+    <mat-card-subtitle>E-mail</mat-card-subtitle>
+    <mat-card-title>
+      <label for="emailInput">
+        <mat-icon *ngIf="isEdit">lock</mat-icon>
+      </label>
+      <mat-form-field class="user-profile__form_field">
+        <input matInput value="{{ userEmail }}"  class="user-profile__input"
+          name="emailInput" type="text" disabled>
+      </mat-form-field>
+    </mat-card-title>
+    <mat-card-content>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
